--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>fox10301</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <h1>Добро пожаловать</h1>
+  <p>Это мой тёмный сайт с зелёным акцентом 🌿</p>
+</body>
+</html>
 
