--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
             color: #333;
         }
         /* Скрытые ссылки — выглядят как обычный текст */
-        a.hidden {
-            color: inherit;        /* тот же цвет, что и окружающий текст */
-            text-decoration: none; /* без подчёркивания */
-        }
-        a.hidden:hover {
-            text-decoration: underline; /* опционально: подчёркивание при наведении */
-        }
+a.hidden {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px dotted #666; /* тонкая пунктирная линия */
+}
+a.hidden:hover {
+    border-bottom: 1px solid #333; /* становится сплошной при наведении */
+}
     </style>
 </head>
 <body>
