--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 a.hidden {
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px dotted #666; /* тонкая пунктирная линия */
+    border-bottom: 1px dotted #98D5A4; /* тонкая пунктирная линия */
 }
 a.hidden:hover {
-    border-bottom: 1px solid #333; /* становится сплошной при наведении */
+    border-bottom: 1px solid #98D5A4; /* становится сплошной при наведении */
 }
     </style>
 </head>
