--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 a.hidden {
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px dotted #98D5A4; /* тонкая пунктирная линия */
+    border-bottom: 1px solid #98D5A4; /* тонкая пунктирная линия */
 }
 a.hidden:hover {
     border-bottom: 1px solid #98D5A4; /* становится сплошной при наведении */
