--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Информация</title>
+    <title>fox10301</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,14 +26,12 @@ a.hidden:hover {
 </head>
 <body>
 
-    <h1>Заголовок страницы</h1>
+    <h1>Person 10301</h1>
 
     <p>
-        Здесь вы можете написать любой текст. Например: 
-        Если вам нужна дополнительная информация по теме А, 
-        обратитесь к соответствующему ресурсу. 
-        По теме Б тоже есть материалы. 
-        А по теме В — отдельный документ.
+        Мне писать о себе нечего.
+        Советую ознакомиться с творчеством <a href="https://youtube.com/@auroramusic" class="hidden" target="_blank">AURORA</a>
+        Советую ознакомиться с новостями об <a href="https://www.theguardian.com/uk/environment" class="hidden" target="_blank">экологии</a>
     </p>
 
     <p>
