--- a/index.html
+++ b/index.html
@@ -33,25 +33,14 @@ a.hidden:hover {
         Советую ознакомиться с творчеством <a href="https://youtube.com/@auroramusic" class="hidden" target="_blank">AURORA</a>
         Советую ознакомиться с новостями об <a href="https://www.theguardian.com/uk/environment" class="hidden" target="_blank">экологии</a>
     </p>
-
+    
+    <h1>Contacts</h1>
+    
     <p>
-        Слова или фразы, под которыми спрятаны ссылки, выглядят абсолютно обычно: 
-        <a href="https://example.com/info-a" class="hidden" target="_blank">тема А</a>, 
-        <a href="https://example.com/info-b" class="hidden" target="_blank">тема Б</a> и 
-        <a href="https://drive.google.com/your-file" class="hidden" target="_blank">тема В</a>.
-        При наведении курсора вы увидите, что это ссылка.
-    </p>
-
-    <p>
-        Вы можете добавить сколько угодно таких скрытых ссылок. 
-        Просто оберните нужное слово или фразу в тег:
-    </p>
-
-    <pre>
-&lt;a href="https://ваша-ссылка.ru" class="hidden" target="_blank"&gt;слово или фраза&lt;/a&gt;
-    </pre>
-
-    <p>Всё. Никаких дополнительных файлов не требуется.</p>
-
+        <a href="https://t.me/fox10301" class="hidden" target="_blank">Telegram</a>/
+        <a href="https://vk.com/person10301" class="hidden" target="_blank">VK</a>/
+        <a href="https://4pda.to/forum/index.php?showuser=9050872" class="hidden" target="_blank">4PDA</a>/
+        <a href="https://github.com/person10301" class="hidden" target="_blank">GitHub</a>
+        </p>
 </body>
 </html>
