--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ a.hidden:hover {
     <h1>Person 10301</h1>
 
     <p>
-        "Я знаю, что ничего не знаю" (<a href="https://ru.wikipedia.org/wiki/%D0%AF_%D0%B7%D0%BD%D0%B0%D1%8E%2C_%D1%87%D1%82%D0%BE_%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE_%D0%BD%D0%B5_%D0%B7%D0%BD%D0%B0%D1%8E" class="hidden" target="_blank">Сократ?</a>
+        "Я знаю, что ничего не знаю" (<a href="https://ru.wikipedia.org/wiki/%D0%AF_%D0%B7%D0%BD%D0%B0%D1%8E%2C_%D1%87%D1%82%D0%BE_%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE_%D0%BD%D0%B5_%D0%B7%D0%BD%D0%B0%D1%8E" class="hidden" target="_blank">Сократ?</a>)
         Советую ознакомиться с творчеством <a href="https://youtube.com/@auroramusic" class="hidden" target="_blank">AURORA</a>
         Советую ознакомиться с новостями об <a href="https://www.theguardian.com/uk/environment" class="hidden" target="_blank">экологии</a>
     </p>
