--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ a.hidden:hover {
     <p>
     "Я знаю, что ничего не знаю" (<a href="https://ru.wikipedia.org/wiki/%D0%AF_%D0%B7%D0%BD%D0%B0%D1%8E%2C_%D1%87%D1%82%D0%BE_%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE_%D0%BD%D0%B5_%D0%B7%D0%BD%D0%B0%D1%8E" class="hidden" target="_blank">Сократ?</a>)
     <br>
-    Советую ознакомиться с творчеством <a href="https://youtube.com/@auroramusic" class="hidden" target="_blank">AURORA</a>
+    Listen and enjoy AURORA in <a href="https://youtube.com/@auroramusic" class="hidden" target="_blank">AURORA</a>
     <br>
-    Советую ознакомиться с новостями об <a href="https://www.theguardian.com/uk/environment" class="hidden" target="_blank">экологии</a>
+    Please, don't forget about <a href="https://www.theguardian.com/uk/environment" class="hidden" target="_blank">Ecology</a>
     </p>
     
     <h1>Contacts</h1>
