--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@ a.hidden:hover {
     <h1>Person 10301</h1>
     
     <p>
-    "Я знаю, что ничего не знаю" (<a href="https://ru.wikipedia.org/wiki/%D0%AF_%D0%B7%D0%BD%D0%B0%D1%8E%2C_%D1%87%D1%82%D0%BE_%D0%BD%D0%B8%D1%87%D0%B5%D0%B3%D0%BE_%D0%BD%D0%B5_%D0%B7%D0%BD%D0%B0%D1%8E" class="hidden" target="_blank">Сократ?</a>)
+    "I know that I know nothing" (<a href="https://en.wikipedia.org/wiki/I_know_that_I_know_nothing" class="hidden" target="_blank">Socrates?</a>)
     <br>
     Listen and enjoy AURORA in <a href="https://youtube.com/@auroramusic" class="hidden" target="_blank">AURORA</a>
     <br>
