--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ a.hidden:hover {
     <h1>Person 10301</h1>
     
     <p>
+    Stop promoting AI-generated content everywhere, it's cluttering up the internet.
+    <br>
     "I know that I know nothing" (<a href="https://en.wikipedia.org/wiki/I_know_that_I_know_nothing" class="hidden" target="_blank">Socrates?</a>)
     <br>
     Listen and enjoy AURORA in <a href="https://youtube.com/@auroramusic" class="hidden" target="_blank">AURORA</a>
