--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ a.hidden:hover {
 </head>
 <body>
     <h1>Person 10301</h1>
-    
+
+    <h2>Android will become a locked-down platform
+in...
+https://keepandroidopen.org</h2>
     <p>
     Stop promoting AI-generated content everywhere, it's cluttering up the internet.
     <br>
